--- a/static_webpages/writings.dev/style.css
+++ b/static_webpages/writings.dev/style.css
@@ -15,7 +15,7 @@ body {
   min-height: 100vh;
   background-color: #232830;
   color: #FFFFFF;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: 'Poppins', sans-serif;
 }
 
 .content {
@@ -33,7 +33,7 @@ body {
   justify-content: space-between;
   align-items: center;
   vertical-align: middle;
-  font-weight: 600
+  font-weight: 400
 }
 
 .website-name {
@@ -57,7 +57,8 @@ h1 {
   font-style: italic;
   font-size: 3rem;
   margin-bottom: 1rem;
-  font-weight: 600;
+  font-weight: 400;
+  font-family: 'Recursive', sans-serif;
 }
 
 h2 {
@@ -83,6 +84,11 @@ h2 {
   mask-image: linear-gradient(to left, transparent, black 40px);
 }
 
+.filtering-options {
+  display: flex;
+  align-items: center;
+}
+
 .categories>p {
   color: #909090;
   font-style: italic;
@@ -91,7 +97,7 @@ h2 {
 }
 
 #quill {
-  width: 30vh;
+  width: 10vh;
 }
 
 .cards-container {
@@ -108,21 +114,23 @@ h2 {
   color: black;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  gap: 0.5rem;
-  padding: 1rem 10%;
+  min-height: 18rem;
+  padding: 1rem;
 }
 
 .card>h3 {
-  font-weight: bold;
-  font-size: 0.75rem;
+  margin-top: 1rem;
+  font-weight: 600;
+  font-size: 0.7rem;
 }
 
 .card>p {
+  margin-top: 0.5rem;
   font-size: 0.7rem;
 }
 
 .card-footer {
+  margin-top: 0.75rem;
   display: flex;
   width: 100%;
   justify-content: flex-start;
@@ -131,6 +139,7 @@ h2 {
 }
 
 .card>img {
+  min-height: 45%;
   width: 100%;
   border-radius: 1rem;
 }
